<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jogo do Adivinha</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="str_sobre_o_jogo">Bem vindo ao \"Jogo do Adivinha\"!\nEscreva os nºs entre os quais quer jogar.</string>
    <string name="str_pista_min">Aqui o nº mínimo (exº: 1)</string>
    <string name="str_pista_max">Aqui o nº máximo (exº: 1000)</string>
    <string name="str_btn_comecar_jogo">Começar o jogo!</string>
    <string name="str_comecar_jogo_debug">Aqui aparecerá info de debug.</string>
</resources>
