<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Inicial" >

    <TextView
        android:id="@+id/id_tv_sobre_o_jogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_sobre_o_jogo" />
    
    <EditText
        android:id="@+id/id_et_min"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_tv_sobre_o_jogo"
        android:hint="@string/str_pista_min"
        android:inputType="textNoSuggestions"       
    />
    
    <EditText
        android:id="@+id/id_et_max"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_et_min"
        android:hint="@string/str_pista_max"
        android:inputType="textNoSuggestions"       
    />
    
    <Button
        android:id="@+id/id_btn_comecar_jogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_et_max"
        android:text="@string/str_btn_comecar_jogo"
    />
    
    <TextView
        android:id="@+id/id_tv_debug"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_btn_comecar_jogo"
        android:text="@string/str_comecar_jogo_debug"
    />

</RelativeLayout>
